# powershell-docset

./: README.md  posh-to-dash.py  pyproject.toml
.github/workflows/: scrape-and-build.yaml
static/docset-template/: create-versioned-docset-json.py
